--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -17,4 +17,9 @@ html
     script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
 
+    //- TinyMCE
+    script(src= "/tinymce/tinymce.min.js")
+    script(src="/admin/js/tinymce-config.js")
+    //- End TinyMCE
+
     script(src="/admin/js/script.js")
