Tạo danh mục sản phẩm p1

--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -1,43 +1,19 @@
 extends ../../layouts/default.pug
-include ../../mixins/filter-status.pug
-include ../../mixins/search.pug
-include ../../mixins/pagination.pug
-include ../../mixins/form-change-multi.pug
-include ../../mixins/alert.pug
-include ../../mixins/sort.pug
 
 block main
-  +alert-success("5000")
-  h1 Trang danh sách sản phẩm
-
-  .card.mb-3 
-    .card-header Bộ lọc và Tìm kiếm 
-    .card-body 
-      .row 
-        .col-6
-          +filter-status(filterStatus)
-        .col-6 
-          +search(keyword)
-  
-  .card.mb-3 
-    .card-header Sắp xếp
-      .card-body 
-        .row 
-          .col-4 
-            +sort()
+  h1 Trang danh mục sản phẩm
 
   .card.mb-3 
     .card-header Danh sách 
       .card-body 
         .row 
           .col-8
-            +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
           .col-4 
             a(
-              href=`${prefixAdmin}/products/create`
+              href=`${prefixAdmin}/products-category/create`
               class="btn btn-outline-success"
             ) + Thêm mới
-
+  
         table(
           class="table table-hover table-sm"
           checkbox-multi
@@ -49,12 +25,11 @@ block main
               th STT 
               th Hình ảnh 
               th Tiêu đề
-              th Giá
               th Vị trí
               th Trạng thái 
               th Hành động
           tbody 
-            each item, index in products
+            each item, index in records
               tr 
                 td 
                   input(
@@ -71,7 +46,6 @@ block main
                     height="auto"
                   )
                   td #{item.title}
-                  td #{item.price}$
                   td 
                     input(
                       type="number"
@@ -97,11 +71,11 @@ block main
                       )  Dừng hoạt động
                   td  
                     a(
-                      href=`${prefixAdmin}/products/detail/${item.id}`
+                      href=`${prefixAdmin}/products-category/detail/${item.id}`
                       class="btn btn-secondary btn-sm"
                     ) Chi tiết
                     a(
-                      href=`${prefixAdmin}/products/edit/${item.id}`
+                      href=`${prefixAdmin}/products-category/edit/${item.id}`
                       class="btn btn-warning btn-sm"
                     ) Sửa
                     button(
@@ -109,21 +83,3 @@ block main
                       data-id=item.id
                       button-delete
                     ) Xoá
-
-  +pagination(pagination)
-
-  form(
-    action=""
-    method="POST"
-    id="form-change-status"
-    data-path= `${prefixAdmin}/products/change-status`
-  )
-
-  form(
-    action=""
-    method="POST"
-    id="form-delete-item"
-    data-path=`${prefixAdmin}/products/delete`
-  )
-
-  script(src="/admin/js/product.js")
