Tính năng sửa danh mục sản phẩm

--- a/views/admin/pages/products-category/edit.pug
+++ b/views/admin/pages/products-category/edit.pug
@@ -3,12 +3,12 @@ include ../../mixins/alert.pug
 include ../../mixins/select-tree.pug
 
 block main 
-  h1(class="mb-4") Thêm mới danh mục sản phẩm 
+  h1(class="mb-4") Chỉnh sửa danh mục sản phẩm 
 
   +alert-error(5000)
 
   form(
-    action=`${prefixAdmin}/products-category/create`
+    action=`${prefixAdmin}/products-category/edit/${data.id}?_method=PATCH`
     method="POST"
     enctype="multipart/form-data"
   )
@@ -20,6 +20,7 @@ block main
         id="title"
         name="title"
         required
+        value=data.title
       )
     div(class="form-group")
       label(for="parent_id") Danh mục cha 
@@ -30,7 +31,7 @@ block main
       )
         option(value="") -- Chọn danh mục cha --
         if(records)
-          +select-tree(records)
+          +select-tree(records, 1, data.parent_id)
 
     div(class="form-group")
       label(for="desc") Mô tả 
@@ -41,7 +42,7 @@ block main
         name="description"
         rows="5"
         textarea-mce
-      )
+      ) !{data.description}
     div(
       class="form-group"
       upload-image
@@ -55,7 +56,7 @@ block main
         upload-image-input
       )
       img(
-        src=""
+        src=data.thumbnail
         class="image-preview"
         upload-image-preview
       )
@@ -68,6 +69,7 @@ block main
         name="position"
         placeholder="Tự động tăng"
         min="1"
+        value=data.position
       )
     div(class="form-group form-check form-check-inline")
       input(
@@ -76,7 +78,7 @@ block main
         id="statusActive"
         name="status"
         value="active"
-        checked
+        checked=(data.status == "active" ? true : false)
       )
       label(for="statusActive" class="form-check-label") Hoạt động
     div(class="form-group form-check form-check-inline")
@@ -86,11 +88,12 @@ block main
         id="statusInActive"
         name="status"
         value="inactive"
+        checked=(data.status == "inactive" ? true : false)
       )
       label(for="statusInActive" class="form-check-label") Dừng Hoạt động
     div(class="form-group")
       button(
         type="submit"
         class="btn btn-primary"
-      ) Tạo mới
+      ) Cập nhật
     
