Thêm tài khoản và hiển thị ds tài khoản

--- a/views/admin/pages/accounts/create.pug
+++ b/views/admin/pages/accounts/create.pug
@@ -1,79 +1,55 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
-include ../../mixins/select-tree.pug
 
 block main 
   +alert-error(5000)
-  h1(class="mb-4") Thêm mới sản phẩm 
+  h1(class="mb-4") Thêm mới tài khoản
 
   form(
-    action=`${prefixAdmin}/products/create`
-    id="form-create-product"
+    action=`${prefixAdmin}/accounts/create`
     method="POST"
     enctype="multipart/form-data"
   )
     div(class="form-group")
-      label(for="title") Tiêu đề
+      label(for="fullName") Họ tên *
       input(
         type="text"
         class="form-control"
-        id="title"
-        name="title"
+        id="fullName"
+        name="fullName"
         required
       )
     div(class="form-group")
-      label(for="product_category_id") Danh mục
-      select(
-        name="product_category_id"
-        id="product_category_id"
-        class="form-control"
-      )
-        option(value="") -- Chọn danh mục --
-        if(category)
-          +select-tree(category)
-    div(class="form-group")
-      label(for="desc") Mô tả
-      textarea(
-        class="form-control"
-        id="desc"
-        name="description"
-        row="5"
-      )
-    div(class="form-group")
-      label(for="price") Giá
+      label(for="email") Email *
       input(
-        type="number"
+        type="email"
         class="form-control"
-        id="price"
-        name="price"
-        value="0"
-        min="0"
+        id="email"
+        name="email"
+        required
       )
     div(class="form-group")
-      label(for="discount") % Giảm giá
+      label(for="password") Mật khẩu *
       input(
-        type="number"
+        type="password"
         class="form-control"
-        id="discount"
-        name="discountPercentage"
-        value="0"
-        min="0"
+        id="password"
+        name="password"
+        required
       )
     div(class="form-group")
-      label(for="stock") Số lượng
+      label(for="phone") Số điện thoại
       input(
-        type="number"
+        type="text"
         class="form-control"
-        id="stock"
-        name="stock"
-        value="0"
-        min="0"
+        id="phone"
+        name="phone"
       )
     div(
       class="form-group"
       upload-image
     )
-      label(for="thumbnail") Ảnh
+      label(for="avatar") Avatar
       input(
         type="file"
         class="form-control-file"
@@ -88,15 +64,11 @@ block main
         class="image-preview"
       )
     div(class="form-group")
-      label(for="position") Vị trí
-      input(
-        type="number"
-        class="form-control"
-        id="position"
-        name="position"
-        placeholder="Tự động tăng"
-        min="1"
-      )
+      label(for="role_id") Phân quyền
+      select(name="role_id" id="role_id" class="form-control")
+        option(disabled) -- Chọn --
+        each item in roles
+          option(value=item.id) #{item.title}
     div(class="form-group form-check form-check-inline")
       input(
         type="radio"
@@ -121,5 +93,3 @@ block main
         type="submit"
         class="btn btn-primary"
       ) Tạo mới
-
-  script(src="/admin/js/product.js")
