--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -114,12 +114,12 @@ block main
       input(
         type="radio"
         class="form-check-input"
-        id="statusActive"
+        id="statusInActive"
         name="status"
         value="inactive"
         checked=(product.status == "inactive" ? true : false)
       )
-      label(for="statusActive" class="form-check-label") Dừng hoạt động
+      label(for="statusInActive" class="form-check-label") Dừng hoạt động
     div(class="form-group")
       button(
         type="submit"
